# reveil_republicain

./: .gitignore  CMakeLists.txt  README.md  drawing_objects.cpp  drawing_objects.h  imgui.ini
codegen/: README.md  codegen.py
docs/: EMULATOR.md
emulator/: CMakeLists.txt  hardware_emulator.h  main.cpp
src/: CMakeLists.txt  bit_packer.h  char_pixel_extractor.h  concrete_fonts.h  font.h  hardware_interface.h  line_renderer.h  menu_painter.h  number_to_string.h  renderer.h  reveil.cpp  reveil.h  rr_time.cpp  rr_time.h  state.h  string_iterator.h  text_layout_calculator.h  time_painter.h
stm32/: .cproject  .project  STM32F413ZHTX_FLASH.ld  STM32F413ZHTX_RAM.ld  reveil_republicain.ioc
stm32/Core/Inc/: main.h
stm32/Core/Src/: main.c  main.cpp
stm32/HARDWARE/: hardware_stm32.cpp  hardware_stm32.h
stm32/HARDWARE/EPD/: Ap_29demo.h  Display_EPD_W21.c  Display_EPD_W21.h  Display_EPD_W21_spi.c  Display_EPD_W21_spi.h
tests/: CMakeLists.txt  bit_packer_test.cpp  char_pixel_extractor_test.cpp  line_renderer_test.cpp  renderer_test.cpp  reveil_test.cpp  string_iterator_test.cpp  text_layout_calculator_test.cpp  time_test.cpp
